# murl

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  config.go  config_test.go  go.mod  go.sum  handlers.go  handlers_test.go
.aspect/bazelrc/: BUILD.bazel
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/checksums/: bazelisk.txt  golang.txt
.github/workflows/: ci.yml  release.yml
cmd/: BUILD.bazel  main.go  main_test.go
cmd/testdata/: config.yaml
examples/: config.yaml
internal/config/: BUILD.bazel  config.go  config_test.go
internal/route/: BUILD.bazel  config.go  config_test.go  handlers.go  handlers_test.go
internal/server/: BUILD.bazel  config.go  config_test.go  server.go  server_test.go
internal/server/templates/: content.md.tmpl  page.html.tmpl  routes.md.tmpl
internal/testtls/: BUILD.bazel  tls.go
