load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/slightly-inconvenient/murl
# gazelle:exclude .bazel/
# gazelle:proto disable
gazelle(
    name = "gazelle",
    command = "fix",
)

buildifier(
    name = "buildifier",
    exclude_patterns = [
        ".git/*",
        ".bazel/*",
    ],
    lint_mode = "fix",
    lint_warnings = ["all"],
    mode = "fix",
)

buildifier(
    name = "buildifier_check",
    exclude_patterns = [
        ".git/*",
        ".bazel/*",
    ],
    lint_mode = "warn",
    lint_warnings = ["all"],
    mode = "check",
)
