"""
MURL Bazel Module file

This file contains the Bazel dependencies required to build, run and test the project.
"""

module(name = "murl")

# === DEPS ===

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "7.3.1",
    dev_dependency = True,
)

# When updated, remember to run `bazel run //.aspect/bazelrc:update` to update the .bazelrc preset files
bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")

# === GOLANG SETUP ===

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host(name = "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_cel_go",
    "in_gopkg_yaml_v3",
)
