"""
MURL Bazel Module file

This file contains the Bazel dependencies required to build, run and test the project.
"""

module(name = "murl")

# === DEPS ===

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "container_structure_test", version = "1.19.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

# When updated, remember to run `bazel run //.aspect/bazelrc:update` to update the .bazelrc preset files
bazel_dep(name = "aspect_bazel_lib", version = "2.9.1")

# === GOLANG SETUP ===

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host(name = "go_sdk")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_cel_go",
    "com_github_yuin_goldmark",
    "com_github_urfave_cli_v3",
    "in_gopkg_yaml_v3",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    digest = "sha256:3a03fc0826340c7deb82d4755ca391bef5adcedb8892e58412e1a6008199fa91",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64", "distroless_static_linux_arm64_v8")
