load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/slightly-inconvenient/murl/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/route",
        "//internal/server",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "config_test",
    timeout = "short",
    srcs = ["config_test.go"],
    deps = [
        ":config",
        "//internal/testtls",
    ],
)
