load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "route",
    srcs = [
        "config.go",
        "handlers.go",
    ],
    importpath = "github.com/slightly-inconvenient/murl/internal/route",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "@com_github_google_cel_go//cel:go_default_library",
        "@com_github_google_cel_go//common/types:go_default_library",
    ],
)

go_test(
    name = "route_test",
    timeout = "short",
    srcs = [
        "config_test.go",
        "handlers_test.go",
    ],
    deps = [
        ":route",
        "//internal/config",
    ],
)
