load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "config.go",
        "server.go",
    ],
    embedsrcs = [
        "templates/root",
        "templates/routes",
    ],
    importpath = "github.com/slightly-inconvenient/murl/internal/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/route",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
        "@com_github_yuin_goldmark//renderer/html",
    ],
)

go_test(
    name = "server_test",
    timeout = "short",
    srcs = [
        "config_test.go",
        "server_test.go",
    ],
    deps = [
        ":server",
        "//internal/route",
        "//internal/testtls",
    ],
)
