load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "config.go",
        "server.go",
    ],
    embedsrcs = [
        "templates/content.md.tmpl",
        "templates/page.html.tmpl",
        "templates/routes.md.tmpl",
    ],
    importpath = "github.com/slightly-inconvenient/murl/internal/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/route",
        "@com_github_yuin_goldmark//:goldmark",
        "@com_github_yuin_goldmark//extension",
        "@com_github_yuin_goldmark//parser",
        "@com_github_yuin_goldmark//renderer/html",
    ],
)

go_test(
    name = "server_test",
    timeout = "short",
    srcs = [
        "config_test.go",
        "server_test.go",
    ],
    deps = [
        ":server",
        "//internal/config",
        "//internal/route",
        "//internal/testtls",
    ],
)
